# ssg

./: Cargo.toml  README.md  benchmark-results.json  benchmark-results.md  dhat-heap-with-arc.json  dhat-heap-with-clone.json  dhat-heap.json  flake.nix  footer.html  header.html  result  style.css  test.html
.github/workflows/: ci.yml
assets/: theme.tmTheme
benches/: benchmark.rs  cold_start.rs  component.rs  criterion_io.rs  criterion_pipeline.rs  criterion_transformers.rs  dhat_build.rs  dhat_compress.rs  dhat_transformers.rs  end_to_end_cpu.rs  end_to_end_io.rs  fixtures.rs  generate_corpus.py  generate_manifest.py  html_write.rs  io.rs  micro.rs  renderer_isolation.rs  util.rs
benches/corpora/: manifest.json
benches/corpora/adversarial/: 1m_escape_dense.md  1m_long_lines.md  1m_nested_constructs.md  64k_escape_dense.md
benches/corpora/code_dense/: 1m_200blocks.md  64k_40blocks.md  8k_5blocks.md
benches/corpora/math_dense/: 1m_mixed_valid_invalid.md  64k_mixed_valid_invalid.md  64k_valid.md  8k_valid.md
benches/corpora/mixed_features/: 1m.md  64k.md  8k.md
benches/corpora/plain/: 1k.md  1m.md  64k.md  8k.md
benches/corpora/snippets/: code_plain_large.txt  code_rust_large.txt  math_complex.tex  math_invalid.tex  style_large.css
contents/: test.md
nix/checks/: default.nix
nix/format/: default.nix
nix/pkgs/: default.nix
nix/pkgs/ssg/: default.nix
nix/shell/: default.nix
proptest-regressions/lib/transformer/: mod.txt
public/: index.html  style.css
public/posts/: test.html
public/tags/: notes.html  ssg.html
src/: cli.rs  main.rs
src/lib/: article.rs  css.rs  document.rs  front_matter.rs  header.rs  mod.rs  pipeline.rs  renderer.rs  test_support.rs  types.rs  utils.rs
src/lib/article/: mod.rs  tests.rs
src/lib/config/: mod.rs
src/lib/css/: mod.rs
src/lib/feed/: mod.rs
src/lib/header/: mod.rs
src/lib/highlighter/: mod.rs  syntect.rs
src/lib/math/: katex.rs  mod.rs
src/lib/pipeline/: mod.rs  tests.rs
src/lib/renderer/: jobs.rs  katex.rs  mod.rs  syntect.rs
src/lib/templates/: mod.rs
src/lib/transformer/: code_block.rs  epigraph.rs  footnote.rs  heading.rs  image.rs  math.rs  mod.rs  toc.rs
src/lib/transformer/code_block/: mod.rs  tests.rs
src/lib/transformer/epigraph/: mod.rs  tests.rs
src/lib/transformer/footnote/: mod.rs  tests.rs
src/lib/transformer/heading/: mod.rs  tests.rs
src/lib/transformer/image/: mod.rs  tests.rs
src/lib/transformer/math/: mod.rs  tests.rs
src/lib/transformer/toc/: mod.rs  tests.rs
src/lib/types/: mod.rs  tests.rs
src/lib/utils/: mod.rs  tests.rs
test/: 01-basics.md  01-code-samples.md  02-layout.md  02-mathematics.md  03-mixed-content.md  04-technical-documentation.md  05-blog-post.md  benchmark.sh  style.css
tools/: bench.py
