[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
color-eyre = { version = "0.6.5", default-features = false }
gray_matter = "0.3.2"
itertools = { version = "0.14.0", default-features = false }
katex = "0.4.6"
lightningcss = "1.0.0-alpha.70"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html", "simd"] }
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
time = "0.3.45"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.8.0"
proptest = "1.9.0"
proptest-derive = "0.7.0"

[lib]
name = "ssg"
path = "src/lib/mod.rs"

[[bin]]
name = "ssg"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
