[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
atom_syndication = { version = "0.12.7", default-features = false }
axum = "0.8.8"
chrono = "0.4.43"
color-eyre = { version = "0.6.5", default-features = false }
gray_matter = "0.3.2"
itertools = { version = "0.14.0", default-features = false }
katex = "0.4.6"
lightningcss = "1.0.0-alpha.70"
minify-html = { version = "0.18.1", default-features = false }
notify = "8.2.0"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html", "simd"] }
rss = { version = "2.0.12", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
time = "0.3.45"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tower-livereload = "0.10.2"
walkdir = "2.5.0"
imagesize = "0.13.0"

[dev-dependencies]
criterion = "0.8.0"
proptest = "1.9.0"
proptest-derive = "0.7.0"
tempfile = "3.10.0"

[lib]
name = "ssg"
path = "src/lib/mod.rs"

[[bin]]
name = "ssg"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
